--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -1,204 +1,210 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Formulário</title>
-</head>
-<style>
+  </head>
+  <style>
     * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: 'Inter', sans-serif;
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+      font-family: "Inter", sans-serif;
     }
 
     body {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #032e52, #a8eb12);
-        background-color: #FF3CAC;
-        background-image: linear-gradient(to right top, #004d7a 0%, #784BA0 50%, #2B86C5 100%);
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-image: linear-gradient(
+        to right top,
+        #051937,
+        #004d7a,
+        #008793,
+        #032e52,
+        #a8eb12
+      );
+      background-color: #ff3cac;
+      background-image: linear-gradient(
+        to right top,
+        #004d7a 0%,
+        #784ba0 50%,
+        #2b86c5 100%
+      );
     }
 
-
     .container {
-        width: 80%;
-        height: 80vh;
-        display: flex;
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
+      width: 80%;
+      height: 80vh;
+      display: flex;
+      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
     }
 
     .form-image {
-        width: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #fde3a7d7;
-        padding: 1rem;
+      width: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #fde3a7d7;
+      padding: 1rem;
     }
 
     .form-image img {
-        width: 31rem;
+      width: 31rem;
     }
 
     .form {
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: rgba(240, 228, 228, 0.842);
-        padding: 3rem;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(240, 228, 228, 0.842);
+      padding: 3rem;
     }
 
     .form-header {
-        margin-bottom: 3rem;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
+      margin-bottom: 3rem;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
     }
 
     .out-button {
-        display: flex;
-        align-items: center;
+      display: flex;
+      align-items: center;
     }
 
     .out-button button {
-        border: none;
-        background-color: #16a085;
-        padding: 0.4rem 1rem;
-        border-radius: 5px;
-        cursor: pointer;
+      border: none;
+      background-color: #16a085;
+      padding: 0.4rem 1rem;
+      border-radius: 5px;
+      cursor: pointer;
     }
 
     .out-button button:hover {
-        background-color: #16a085;
+      background-color: #16a085;
     }
 
     .out-button button a {
-        text-decoration: none;
-        font-weight: 500;
-        color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      color: #fff;
     }
 
     .form-header h1::after {
-        content: '';
-        display: block;
-        width: 5rem;
-        height: 0.3rem;
-        background-color: #16a085;
-        margin: 0 auto;
-        position: absolute;
-        border-radius: 10px;
+      content: "";
+      display: block;
+      width: 5rem;
+      height: 0.3rem;
+      background-color: #16a085;
+      margin: 0 auto;
+      position: absolute;
+      border-radius: 10px;
     }
 
-
     .continue-button button {
-        width: 100%;
-        margin-top: 2.5rem;
-        border: none;
-        background-color: #16a085;
-        padding: 0.62rem;
-        border-radius: 5px;
-        cursor: pointer;
+      width: 100%;
+      margin-top: 2.5rem;
+      border: none;
+      background-color: #16a085;
+      padding: 0.62rem;
+      border-radius: 5px;
+      cursor: pointer;
     }
 
     .input-group {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 1rem 0;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      padding: 1rem 0;
     }
 
     .continue-button button:hover {
-        background-color: #16a084d7;
+      background-color: #16a084d7;
     }
 
     .continue-button button a {
-        text-decoration: none;
-        font-size: 0.93rem;
-        font-weight: 500;
-        color: #fff;
+      text-decoration: none;
+      font-size: 0.93rem;
+      font-weight: 500;
+      color: #fff;
     }
 
     @media screen and (max-width: 1330px) {
-        .form-image {
-            display: none;
-        }
+      .form-image {
+        display: none;
+      }
 
-        .container {
-            width: 50%;
-        }
+      .container {
+        width: 50%;
+      }
 
-        .form {
-            width: 100%;
-        }
-
+      .form {
+        width: 100%;
+      }
     }
 
     @media screen and (max-width: 1064px) {
-        .container {
-            width: 90%;
-            height: auto;
-        }
+      .container {
+        width: 90%;
+        height: auto;
+      }
 
-        .form-header {
-            width: 100%;
-        }
+      .form-header {
+        width: 100%;
+      }
 
-        .input-group {
-            flex-direction: column;
-            z-index: 5;
-            padding-right: 5rem;
-            max-height: 10rem;
-            overflow-y: scroll;
-            flex-wrap: nowrap;
-        }
+      .input-group {
+        flex-direction: column;
+        z-index: 5;
+        padding-right: 5rem;
+        max-height: 10rem;
+        overflow-y: scroll;
+        flex-wrap: nowrap;
+      }
     }
-</style>
+  </style>
 
-<body>
+  <body>
     <div class="container">
-        <div class="form-image">
-            <iframe src="https://giphy.com/embed/eNMrFVCX3KQO5vNVaM"> </iframe>
-        </div>
-        <div class="form">
-            <form action="#">
-                <div class="form-header">
-                    <div class="title">
-                        <h1>
-                            Sobre nós</h1>
-                    </div>
-                    <div class="out-button">
-                        <button><a href="/principal">Voltar</a></button>
-                    </div>
-                </div>
+      <div class="form-image">
+        <iframe src="https://giphy.com/embed/eNMrFVCX3KQO5vNVaM"> </iframe>
+      </div>
+      <div class="form">
+        <form action="#">
+          <div class="form-header">
+            <div class="title">
+              <h1>Sobre nós</h1>
+            </div>
+            <div class="out-button">
+              <button><a href="/principal">Voltar</a></button>
+            </div>
+          </div>
 
-                <div class="input-group">
-
-                    <h3>Olá, tudo bem? Espero que sim =D</h3>
-                    <p>Estamos aqui para apresentar a vocês o grande <b>Talento</b> que adquirimos ao longo do curso.
-                        Habilidades que jamais serão disperdiçadas enquanto andarmos nessa Terra.
-                    </p>
-                    <p>
-                        Giovanni Trintinalia e Renan Soares cumpriram sua missão em oferecer um sistema capaz de
-                        realizar a
-                        análise de reconhecimento de imagem utilizando <b>AWS Rekognition</b>.
-                        O mundo é um lugar melhor agora e as pessoas podem reconhecer seus produtos em paz absoluta e
-                        viver em
-                        harmonia.
-                    </p>
-                </div>
-            </form>
-        </div>
+          <div class="input-group">
+            <h3>Olá, tudo bem? Espero que sim =D</h3>
+            <p>
+              Estamos aqui para apresentar a vocês o grande <b>Talento</b> que
+              adquirimos ao longo do curso. Habilidades que jamais serão
+              disperdiçadas enquanto andarmos nessa Terra.
+            </p>
+            <p>
+              Giovanni Trintinalia e Renan Soares cumpriram sua missão em
+              oferecer um sistema capaz de realizar a análise de reconhecimento
+              de imagem utilizando <b>AWS Rekognition</b>. O mundo é um lugar
+              melhor agora e as pessoas podem reconhecer seus produtos em paz
+              absoluta e viver em harmonia.
+            </p>
+          </div>
+        </form>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
