--- a/src/views/principal.ejs
+++ b/src/views/principal.ejs
@@ -1,187 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>TCC</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-</head>
-<style>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <style>
     * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: 'Inter', sans-serif;
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+      font-family: "Inter", sans-serif;
     }
 
     body {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #032e52, #a8eb12);
-        background-color: #FF3CAC;
-        background-image: linear-gradient(to right top, #004d7a 0%, #784BA0 50%, #2B86C5 100%);
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-image: linear-gradient(
+        to right top,
+        #051937,
+        #004d7a,
+        #008793,
+        #032e52,
+        #a8eb12
+      );
+      background-color: #ff3cac;
+      background-image: linear-gradient(
+        to right top,
+        #004d7a 0%,
+        #784ba0 50%,
+        #2b86c5 100%
+      );
     }
 
     .container {
-        width: 80%;
-        height: 80vh;
-        display: flex;
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
+      width: 80%;
+      height: 80vh;
+      display: flex;
+      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
     }
 
     .form-image {
-        width: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #fde3a7d7;
-        padding: 1rem;
+      width: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #fde3a7d7;
+      padding: 1rem;
     }
 
     .form-image img {
-        width: 31rem;
+      width: 31rem;
     }
 
     .form {
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: rgba(240, 228, 228, 0.842);
-        padding: 3rem;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(240, 228, 228, 0.842);
+      padding: 3rem;
     }
 
     .form-header {
-        margin-bottom: 3rem;
-        width: 150%;
-        display: flex;
-        justify-content: space-between;
+      margin-bottom: 3rem;
+      width: 150%;
+      display: flex;
+      justify-content: space-between;
     }
 
     .out-button {
-        display: flex;
-        align-items: center;
+      display: flex;
+      align-items: center;
     }
 
     .out-button button {
-        border: none;
-        background-color: #16a085;
-        padding: 0.4rem 1rem;
-        border-radius: 5px;
-        cursor: pointer;
+      border: none;
+      background-color: #16a085;
+      padding: 0.4rem 1rem;
+      border-radius: 5px;
+      cursor: pointer;
     }
 
     .out-button button:hover {
-        background-color: #16a085;
+      background-color: #16a085;
     }
 
     .out-button button a {
-        text-decoration: none;
-        font-weight: 500;
-        color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      color: #fff;
     }
 
     .form-header h1::after {
-        content: '';
-        display: block;
-        width: 5rem;
-        height: 0.3rem;
-        background-color: #16a085;
-        margin: 0 auto;
-        position: absolute;
-        border-radius: 10px;
+      content: "";
+      display: block;
+      width: 5rem;
+      height: 0.3rem;
+      background-color: #16a085;
+      margin: 0 auto;
+      position: absolute;
+      border-radius: 10px;
     }
 
-
     .continue-button button {
-        width: 100%;
-        margin-top: 2.5rem;
-        border: none;
-        background-color: #16a085;
-        padding: 0.62rem;
-        border-radius: 5px;
-        cursor: pointer;
+      width: 100%;
+      margin-top: 2.5rem;
+      border: none;
+      background-color: #16a085;
+      padding: 0.62rem;
+      border-radius: 5px;
+      cursor: pointer;
     }
 
     .continue-button button:hover {
-        background-color: #16a084d7;
+      background-color: #16a084d7;
     }
 
     .continue-button button a {
-        text-decoration: none;
-        font-size: 0.93rem;
-        font-weight: 500;
-        color: #fff;
+      text-decoration: none;
+      font-size: 0.93rem;
+      font-weight: 500;
+      color: #fff;
     }
 
     @media screen and (max-width: 1330px) {
-        .form-image {
-            display: none;
-        }
+      .form-image {
+        display: none;
+      }
 
-        .container {
-            width: 50%;
-        }
+      .container {
+        width: 50%;
+      }
 
-        .form {
-            width: 100%;
-        }
+      .form {
+        width: 100%;
+      }
     }
 
     @media screen and (max-width: 1064px) {
-        .container {
-            width: 90%;
-            height: auto;
-        }
+      .container {
+        width: 90%;
+        height: auto;
+      }
 
-        .form-header {
-            width: 100%;
-        }
-
+      .form-header {
+        width: 100%;
+      }
     }
-</style>
+  </style>
 
-<body>
-
+  <body>
     <div class="container">
-        <div class="form-image">
-            <img src="../../public/img1.svg">
+      <div class="form-image">
+        <img src="../../public/img1.svg" />
+      </div>
 
-        </div>
+      <div class="form">
+        <form action="#">
+          <div class="form-header">
+            <div class="title">
+              <h1>Bem vindo</h1>
+            </div>
+            <div class="out-button">
+              <button><a href="/index">Sair</a></button>
+            </div>
+          </div>
 
-        <div class="form">
-            <form action="#">
-                <div class="form-header">
-                    <div class="title">
-                        <h1>Bem vindo</h1>
-                    </div>
-                    <div class="out-button">
-                        <button><a href="/index">Sair</a></button>
-                    </div>
-                </div>
+          <div class="continue-button">
+            <button><a href="/salvar">Registrar Produto</a></button>
+          </div>
 
-                <div class="continue-button">
-                    <button><a href="/salvar">Registrar Produto</a> </button>
-                </div>
+          <div class="continue-button">
+            <button><a href="/consultar">Consultar Produto</a></button>
+          </div>
 
-                <div class="continue-button">
-                    <button><a href="/consultar">Consultar Produto</a> </button>
-                </div>
-                
-                <div class="continue-button">
-                    <button><a href="/about">Sobre</a> </button>
-                </div>
-            </form>
-        </div>
+          <div class="continue-button">
+            <button><a href="/about">Sobre</a></button>
+          </div>
+        </form>
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
